resources/css/large-screen.css
@media(min-width:768px) {

    .main-container {
        display: grid;
        grid-template-columns: 250px repeat(7, 1fr);
        grid-template-rows: minmax(180px, auto);
        grid-template-areas: 
        "hd hd hd hd hd hd hd hd"
        "sd mn mn mn mn mn mn mn"
        "ft ft ft ft ft ft ft ft";
    }

    .header-menu {
        grid-area: hd;
        width: auto;
        display: flex;
    }

    div.extra-info{
        grid-area: sd;
        display: flex;
        flex-direction: column;
        justify-content: center;
    }

    .side-panel {
        width: 200px;
        height: 150px;
        margin: 30px 20px;
        padding: 5px 15px 15px 15px;    
        text-align: unset;
    }

    .content-library {
        grid-area: mn;
        padding-left: 20px;
        justify-content: flex-start;
    }

    .content-container {
        width: auto;
        flex-wrap: wrap;
        flex-direction: row;
    }

    .content-container div { 
        width: 250px;
        height: 100px;
        text-align: unset;
    }

    .content-container div.with-card {
        justify-content: space-between;
    }

    .content-container div#card-text{
        text-align: right;
    }
    .subscribe {
        grid-area: sd;
        margin: 0px auto;
    }

    footer {
        grid-area: ft;
        width: auto;
        justify-content: flex-end;
    }
}

